# Omnigenesys-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md
crates/omnigenesys-core/: Cargo.toml
crates/omnigenesys-core/src/: coords.rs  grid.rs  layer.rs  lib.rs  tile.rs
