[package]
name = "omnigenesys_core"
description = "Engine-agnostic procedural map generation — grid, pipeline, operators and conditions"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde_json = "1"
indexmap = "2"
